# smart-home

./: LICENSE  README.md  workspace.code-workspace
AC-Remote/: .gitignore  platformio.ini
AC-Remote/src/: main.cpp
fan-remote/: .gitignore  platformio.ini
fan-remote/lib/credentials/: README.md
fan-remote/src/: main.cpp
magic-home/esp-controller/: .gitignore  platformio.ini
magic-home/esp-controller/src/: main.cpp
magic-home/server/: .gitignore  Dockerfile  Makefile  pyproject.toml
magic-home/server/magic_home_server/: consts.py  sdk.py  server.py  utils.py
mqtt-broker/: Makefile  README.md
mqtt-broker/config/: mosquitto.conf
utils/IR/: README.md  run_sample_as_is.py  utils.py
