[tool.poetry]
name = "magic_home_server"
version = "0.1.0"
description = ""
authors = ["Nir Geller <gnir.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.24.1"
ipdb = "^0.13.9"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
